add itemList template

--- a/projetJS/index.html
+++ b/projetJS/index.html
@@ -149,6 +149,45 @@
             }
             showCartStatus = !showCartStatus
         }
+        var itemList = [
+            {
+                name : 'Stylo',
+                price : 0,
+                img : '',
+                idnuber : 'nbStylo',
+            },
+            {
+                name : 'Cahier',
+                price : 0,
+                img : '',
+                idnuber : 'nbCahier',
+            },
+            {
+                name : 'Marqueur Tableau',
+                price : 0,
+                img : '',
+                idnuber : 'nbMarqueurTab',
+            },
+            {
+                name : 'Marqueur Permanent',
+                price : 0,
+                img : '',
+                idnuber : 'nbMarqueurPer',
+            },
+            {
+                name : 'Mini Agrafeuse Kangaro',
+                price : 0,
+                img : '',
+                idnuber : 'nbAgrafeuse',
+            },
+            {
+                name : 'Tableau Blanc magnétique',
+                price : 0,
+                img : '',
+                idnuber : 'nbTableau',
+            },
+        ]
+
     </script>
 </body>
 
